--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "ts-loader": "^0.8.2",
     "tsd": "~0.6.5",
     "tslint": "^3.13.0",
-    "tsproject": "~1.2.0-rc.6",
+    "tsproject": "~1.2.1",
     "typescript": "^1.8.10",
     "typescript-require": "^0.2.9-1",
+    "webpack-stream": "^3.2.0",
     "webpack-typescript": "^0.5.6"
   }
 }
